--- a/style.css
+++ b/style.css
@@ -19,3 +19,23 @@ h1 {
         line-height: 1.2;
     }
 }
+h2 {
+    font-size: 3.25rem;
+}
+a {
+    color: #477ca7
+}
+a:visited {
+    color: #74638f;
+}
+#main {
+    margin: 30px 8px;
+    padding: 15px;
+    border-radius: 5px;
+    background: #eee;
+}
+@media (max-width: 460px) {
+    #main {
+        margin: 0;
+    }
+}
