--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a:visited {
 img {
     max-width: 100%;
     display: block;
-    height: auto;
+    height: 600px;
     margin: 0 auto;
 }
 #img-caption {
