--- a/landing.css
+++ b/landing.css
@@ -1,7 +1,38 @@
-#header-img {
-    width: 100x;
-    height: 100px;
+header {
+    position: fixed;
+    align-items: center;
+    background-color: gray;
+    top: 0;
+    padding: 0px 20px;
+    display: flex;
+    justify-content: space-around;
 }
-body {
 
+@media (max-width: 600px) {
+    header {
+        flex-wrap: wrap;
+    }
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+#header-img {
+    width: 200x;
+    height: 200px;
+}
+
+#nav-bar {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 0 50px;
+    width: 100%;
+    margin-top: 10px;
 }
