--- a/landing.css
+++ b/landing.css
@@ -1,38 +1,33 @@
-header {
-    position: fixed;
-    align-items: center;
-    background-color: gray;
-    top: 0;
-    padding: 0px 20px;
-    display: flex;
-    justify-content: space-around;
-}
-
-@media (max-width: 600px) {
-    header {
-        flex-wrap: wrap;
-    }
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    color: #000;
-    text-decoration: none;
-}
 #header-img {
-    width: 200x;
     height: 200px;
+    width: 200px;
 }
 
-#nav-bar {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    padding: 0 50px;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
     width: 100%;
-    margin-top: 10px;
-}
+  }
+  
+  li {
+    float: right;
+  }
+  
+  li a {
+    display: block;
+    color: orange;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
+
