--- a/landing.css
+++ b/landing.css
@@ -1,8 +1,13 @@
+body {
+    background-color: rgb(158, 158, 158);
+}
+
 #header-img {
     height: 200px;
     width: 200px;
 }
 
+/* nav bar */
 ul {
     list-style-type: none;
     margin: 0;
@@ -26,8 +31,17 @@ ul {
     text-decoration: none;
   }
   
+  a {
+    text-decoration: none;
+  }
+  
   /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #111;
   }
 
+/* form area */
+#form-section {
+    text-align: center;
+    font-size: 25px;
+}
